src/test/deca/context/invalid/created/binary_exp/op_arith/modulo_1_a.deca
// Description :
//    test modulo entre un 1 et un a
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10: (3.33) les opérandes d’un modulo doivent être de type ‘int’
class A{}
{
A a = new A();
int c = 1 % a;
}

